# pyblog

./: .gitignore  README.rst  pyproject.toml
src/blogapp/: app.py  init_db.py  schema.sql
src/blogapp/templates/: base.html  index.html
tests/: test_blogapp.py
