[tool.poetry]
name = "blogapp"
version = "0.1.0"
description = ""
authors = ["Mukil Kesavan <mukilk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.1"
toml = "^0.10.2"
pysqlite3 = "^0.4.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.31.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
